fix: spacing and UI bug

--- a/src/components/ControlBar.module.css
+++ b/src/components/ControlBar.module.css
@@ -7,7 +7,7 @@
 .controlBar {
   height: 70px;
   background-color: rgb(24, 24, 24);
-  padding: 0 50px;
+  padding: 0 1rem;
 }
 
 .controlBar .inputDeviceButtons {
@@ -79,6 +79,9 @@
   }
   .hideOnDesktop {
     display: none;
+  }
+  .controlBar {
+    padding: 0 3rem;
   }
   .controlBar .controlButtons {
     justify-content: center;
